--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,12 @@
   scroll-behavior: smooth;
   list-style: none;
   text-decoration: none;
-  background: #eeeff1;
+  
+}
+
+body {
+  overflow-x: hidden;
+
 }
 
 :root {
@@ -38,6 +43,7 @@ html::-webkit-scrollbar-thumb {
 
 section {
     padding: 50px 100px;
+    background: #eeeff1;
 }
 
 
@@ -130,6 +136,7 @@ a {
     background-repeat: no-repeat;
     background-position: right 20px top 20px; 
     background-size: contain;
+    background-color: #eeeff1;
 }
 
 .text h1 {
@@ -168,7 +175,6 @@ a {
     flex: 1 1 7rem;
     display: flex;
     flex-direction: column;
-
 }
 
 .input-box span {
@@ -202,13 +208,23 @@ a {
     background: var(--main-color);
 }
 
+.error {
+    display: none;
+    color: red;
+    font-size: 0.9rem; 
+    background-color: #fff3f3;
+    border: 1px solid #f5c6c6; 
+    padding: 7px; 
+    border-radius: 0.3rem;
+    margin-top: 0.5rem; 
+}
 
-/* RIDE */
-
-
+/* HEADING */
 
 .heading {
     text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
 }
 
 .heading span {
@@ -219,6 +235,8 @@ a {
 .heading h1 {
     font-size: 2rem;
 }
+
+/* RIDE */
   
 .ride-container {
     display: grid;
@@ -251,6 +269,250 @@ a {
 }
 
   
-  
+.about-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 2rem;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 3rem;
+}
 
- 
+
+/* ABOUT */
+
+.about-img  img{
+    width: 100%;
+}
+
+.about-text span {
+    font-weight: 500;
+    color: var(--main-color);
+    text-transform: uppercase;
+}
+
+.about-text p {
+    margin: 0.5rem 0 1.4rem;
+}
+
+/* FOOTER */ 
+
+footer {
+    background: var(--main-color);
+    height: auto;
+    width: 100vw;
+    padding-top: 40px;
+    color: #fff;
+}
+
+.footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h3 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+}
+
+.footer-content p {
+    max-width: 500px;
+    margin: 10px auto;
+    font-size: 14px;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    margin: 1rem 0 1rem 0;
+}
+
+.socials li {
+    margin: 0 10px;
+}
+
+.socials a {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    padding: 0;
+    gap: 0.2rem;
+}
+
+.socials a i {
+    font-size: 1.1rem;
+}
+
+.footer-bottom {
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.footer-bottom p {
+    font-size: 14px;
+    text-transform: capitalize;
+}
+
+
+/* MEDIAS */
+
+@media (max-width: 991px) {
+    header {
+        padding: 18px 40px;
+    }
+
+    section {
+        padding: 50px 40px;
+    }
+}
+
+@media (max-width: 881px) {
+   .home {
+        background-position: left;
+   }
+
+   .form-container form {
+        bottom: .2rem;
+        left: 40px;
+   }
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 11px 20px;
+        justify-content: space-between;
+
+    }
+
+    #menu-icon {
+        display: initial;
+    }
+
+    .btn-contact#btn-home {
+        display: none;
+    }
+
+    .text h1 {
+        font-size: 2rem;
+    }
+
+    .home {
+        grid-template-columns: 1fr;
+        background: none;
+        margin-top: 1rem;
+    }
+
+    .form-container {
+        margin-top: 1.5rem;
+    }
+
+    .form-container form {
+        position: unset;
+    }
+
+    header .navbar {
+        position: absolute;
+        top: -500px;
+        left: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        background: #fff;
+        box-shadow: 0 4px 4px ☐ rgba(0, 0, 0, 0.1);
+        transition: .2s ease;
+        text-align: left;
+    }
+
+    .navbar.active {
+        top: 100%;
+    }
+
+    .navbar a {
+        padding: 1rem;
+        border-left: 2px solid var(--main-color);
+        margin: 1rem;
+        display: block;
+    }
+
+    .navbar a:hover {
+        border: none;
+    }
+
+    .navbar a::after {
+        display: none;
+    }
+
+    .logo img {
+        width: 120px;
+    }
+    
+
+    .heading span {
+        font-size: .9rem;
+        font-weight: 600;
+    }
+
+    .heading h1 {
+        font-size: 1.3rem;
+    }
+
+    .heading {
+      margin: 0;
+    }
+
+    .about-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .about-img {
+        padding: 1rem;
+        order: 2;
+    }
+
+
+    .socials {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .socials a {
+        display: flex;
+        align-items: center;
+        color: #fff;
+        padding: 5px;
+        margin-right: 0px;
+    }
+ }
+
+
+ @media (max-width: 350px) {
+    header {
+        padding: 4px 14px;
+    }
+
+    .logo img {
+        width: 100px;
+    }
+
+    section {
+        padding: 50px 14px;
+    }
+
+    .text h1 {
+        font-size: 1.2rem;
+    }
+
+    .form-container {
+        padding-top: 2rem;
+    }
+
+    
+ }
